# FGBrowser

./: .gitignore  .npmrc  CHANGELOG.md  CLI_USAGE.md  DATABASE_SYNC.md  DISTRIBUTION.md  MULTI_SITE_CRAWLER.md  Makefile  README.md  TESTING_DATABASE_DOWNLOAD.md  TESTING_POPULAR_NOTIFICATIONS.md  WINDOWS-NEXT-STEPS.md  game_page.html  package-lock.json  package.json  page1.html  page2.html  repacks.db  rss_feed.xml  run_crawler.py  test_game_page.html  vite.config.js
.cursor/: rules.mdc
.github/workflows/: README.md  build-cli.yml  build-macos.yml  build-windows.yml  build.yml  check.yml  release.yml  test-ssh.yml
.github/workflows.disabled/: README.md  build-cli.yml  release.yml
.husky/: pre-commit
cli/: Cargo.toml
cli/src/: main.rs
config/: blacklist.txt.example
crawler/: __init__.py  blacklist_manager.py  crawler.py  database.py  manage_blacklist.py  query.py  query_db.py
desktop/: .gitignore  README.md  package-lock.json  package.json  repacks.db  repacks.db-shm  repacks.db-wal  tailwind.config.js
desktop/src/: app.css  app.html
desktop/src-tauri/: Cargo.toml  TESTING.md  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  constants.rs  crawler.rs  database.rs  lib.rs  main.rs
desktop/src-tauri/src/commands/: crawler_commands.rs  database_service.rs  download_commands.rs  game_commands.rs  mod.rs  popular_commands.rs  settings_commands.rs  system_commands.rs  utils.rs
desktop/src-tauri/src/commands/tests/: mod.rs  title_cleaner_tests.rs
desktop/src-tauri/src/crawler/: extractors.rs  fitgirl.rs  mod.rs  models.rs  popular.rs  site_crawler.rs
desktop/src-tauri/src/database/: category_queries.rs  downloads_queries.rs  game_queries.rs  migrations.rs  mod.rs  models.rs  popular_queries.rs
desktop/src/lib/: constants.ts  featureFlags.ts
desktop/src/lib/components/: CachedImage.svelte  CrawlerModal.svelte  DownloadItem.svelte  Downloads.svelte  GameDetails.svelte  GameDetailsModal.svelte  GameList.svelte  Header.svelte  Kbd.svelte  PinkPawAward.svelte  Popular.svelte  PopularSidebar.svelte  SearchBar.svelte  Settings.svelte  Sidebar.svelte  SidebarBase.svelte  StatusBar.svelte  VirtualizedGameGrid.svelte  VirtualizedGameList.svelte
desktop/src/lib/stores/: games.ts  keyboard.ts  navigation.ts  theme.ts
desktop/src/routes/: +page.svelte
docs/: CRAWLER_RUST.md  DATABASE_DOWNLOAD.md  DESKTOP_APP.md  LIFECYCLE.md  POPULAR_REPACKS.md  PROJECT_SUMMARY.md  SETTINGS_DATABASE.md  SOLID_IMPROVEMENTS.md  SQLITE_OPTIMIZATIONS.md
homebrew/: README.md  fgbrowser.rb
samples/: pink_paw_award.html  popular_repacks.html  popular_repacks_year.html
scripts/: build-local.ps1  bump-version.ps1  bump-version.sh  clean-git-history.sh  export-apple-cert.sh  export-clean-db.sh  prepare-changelog.ps1  release.ps1  release.sh  setup-ssh.ps1  update-homebrew-after-release.sh  update-homebrew-sha.sh  upload-release.ps1
server/: README.md  deploy.sh  nginx.conf  update.sh
src/: app.html
src-tauri/: Cargo.toml  DEBUG_UPDATER.txt  GEMINI.md  entitlements.plist  tauri.conf.json  test_size_parsing
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: constants.rs  image_cache.rs  lib.rs  telemetry.rs
src-tauri/src/commands/: crawler_commands.rs  database_service.rs  download_commands.rs  game_commands.rs  game_commands_v2.rs  image_commands.rs  mod.rs  popular_commands.rs  screenshot_commands.rs  telemetry_commands.rs  utils.rs
src-tauri/src/commands/tests/: utils_tests.rs
src-tauri/src/crawler/: extractors.rs  fitgirl.rs  mod.rs  models.rs  popular.rs  riotpixels.rs  title_cleaner.rs
src-tauri/src/database/: cache.rs  game_queries.rs  migrations.rs  mod.rs  models.rs  popular_queries.rs  settings.rs
src/lib/: commands.ts
src/lib/components/: CachedImage.svelte  CrawlerModal.svelte  DownloadItem.svelte  DownloadsSidebar.svelte  GameDetails.svelte  GameList.svelte  GameMedia.svelte  Header.svelte  PinkPawAward.svelte  Popular.svelte  PopularSidebar.svelte  Settings.svelte  SidebarBase.svelte  StatusBar.svelte  UpdateNotification.svelte  VirtualizedGameGrid.svelte  VirtualizedGameList.svelte
src/lib/stores/: appUpdater.ts  downloads.ts  games.ts  keyboard.ts  navigation.ts  popular.ts  updates.ts
src/lib/types/: media.ts
src/routes/: +page.svelte
