[package]
name = "fgbrowser-cli"
version = "0.1.0"
description = "CLI tool for FGBrowser - Crawl repack sites and update the database"
authors = ["you"]
edition = "2021"

[dependencies]
# Reuse the library from the main app
fgbrowser_lib = { path = "../src-tauri" }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"

